fix: fix wrapped tooltip not trigger mouseleave

--- a/packages/client/src/styles/globals.scss
+++ b/packages/client/src/styles/globals.scss
@@ -204,3 +204,8 @@ a {
   flex-direction: column;
   align-items: center;
 }
+
+// @see https://github.com/react-component/tooltip/issues/18#issuecomment-411476678
+.semi-button-disabled {
+  pointer-events: none;
+}
